@@ -4,6 +4,10 @@ Products.CMFCore Changelog
 2.3.0-alpha (unreleased)
 ------------------------
 
+- Skinnable and MembershipTool: Removed support for missing REQUEST argument.
+  'changeSkin', 'setupCurrentSkin' and 'credentialsChanged' will no longer
+  try to acquire the request if it is not passed in explicitly.
+
 - Tools and PortalFolder: Removed support for deprecated marker attributes.
   '_isDirectoryView', '_isPortalRoot', '_isTypeInformation' and '_isAWorkflow'
   are no longer supported.
